Revert "Fix text overflow in dropdown elements"
This reverts commit aba16626078843ac85d6901c9c2e825eb1065529.

--- a/Static/css/comunidapp.css
+++ b/Static/css/comunidapp.css
@@ -209,9 +209,10 @@ a:hover{
 .m-header__dropdown > li{
     font-size: 15px;
     width: 100%;
+    height: 36px;
     text-align: center;
     border-bottom: 1px solid var(--border-grey);
-    padding: 10px;
+    margin-top: 10px;
 }
 
 .m-header__dropdown > li > a{
